// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`arrow-function.js - {"trailingComma":"es5","tabWidth":4,"jsxTabWidth":2,"semi":true,"singleQuote":true,"jsxSingleQuote":false,"printWidth":79,"bracketSpacing":false,"arrowParens":"avoid","brdFormatting":true} format 1`] = `
====================================options=====================================
arrowParens: "avoid"
bracketSpacing: false
brdFormatting: true
jsxSingleQuote: false
jsxTabWidth: 2
parsers: ["babel"]
printWidth: 79
semi: true
singleQuote: true
tabWidth: 4
trailingComma: "es5"
                                                                               | printWidth
=====================================input======================================
const fn1 = () => 1;
const fn2 = (v) => v + 1;
const fn3 = (a, b) => a + b;
const fn4 = (a) => (b) => a + b;
const fn5 = (
  long_param_a,
  long_param_b,
  long_param_c,
  long_param_d,
  long_param_e,
  long_param_f,
) => {
  return (
    long_param_a +
    long_param_b +
    long_param_c +
    long_param_d +
    long_param_e +
    long_param_f
  );
};
const a = React.lazy(
  () =>
    import(
      /* webpackChunkName: "web" */
      "./router.js"
    ),
);
const b = (p) => (p.condition ? "true" : "false");
b(
  { p: 1 },
  () => (c = null),
  () => (e) => {
    b(e);
  },
);
useEffect(() => {
  // do something
}, [a, b]);
useCallback((b, c) => {
  // do something
}, []);

=====================================output=====================================
const fn1 = ()=>1;
const fn2 = v=>v+1;
const fn3 = (a, b)=>a+b;
const fn4 = a=>b=>a+b;
const fn5 = (
    long_param_a,
    long_param_b,
    long_param_c,
    long_param_d,
    long_param_e,
    long_param_f
)=>
{
    return (
        long_param_a+
        long_param_b+
        long_param_c+
        long_param_d+
        long_param_e+
        long_param_f
    );
};
const a = React.lazy(()=>import(/* webpackChunkName: "web" */
'./router.js'));
const b = p=>p.condition ? 'true' : 'false';
b(
    {p: 1},
    ()=>c = null,
    ()=>e=>{
        b(e);
    }
);
useEffect(()=>{
    // do something
}, [a, b]);
useCallback((b, c)=>{
    // do something
}, []);

================================================================================
`;

exports[`call-arguments.js - {"trailingComma":"es5","tabWidth":4,"jsxTabWidth":2,"semi":true,"singleQuote":true,"jsxSingleQuote":false,"printWidth":79,"bracketSpacing":false,"arrowParens":"avoid","brdFormatting":true} format 1`] = `
====================================options=====================================
arrowParens: "avoid"
bracketSpacing: false
brdFormatting: true
jsxSingleQuote: false
jsxTabWidth: 2
parsers: ["babel"]
printWidth: 79
semi: true
singleQuote: true
tabWidth: 4
trailingComma: "es5"
                                                                               | printWidth
=====================================input======================================
// https://brightdata.com/dna/js_code#format-block-break_line
console.log(
  "this is a test section that will show how to handle " +
    "long lines, such as this one which is 2 lines long",
);
console.log(
  "this is a test section that will show how",
  " to handle long lines, such as this one which is 2 lines long",
);
console.log(
  "this is a test section",
  " that will show how",
  " to handle long lines, such as this one which is 2 lines long",
  "this is a test section",
  " that will show how",
  " to handle long lines, such as this one which is 2 lines long",
);

=====================================output=====================================
// https://brightdata.com/dna/js_code#format-block-break_line
console.log('this is a test section that will show how to handle '+
    'long lines, such as this one which is 2 lines long');
console.log('this is a test section that will show how',
    ' to handle long lines, such as this one which is 2 lines long');
console.log('this is a test section', ' that will show how',
    ' to handle long lines, such as this one which is 2 lines long',
    'this is a test section', ' that will show how',
    ' to handle long lines, such as this one which is 2 lines long');

================================================================================
`;

exports[`expression.js - {"trailingComma":"es5","tabWidth":4,"jsxTabWidth":2,"semi":true,"singleQuote":true,"jsxSingleQuote":false,"printWidth":79,"bracketSpacing":false,"arrowParens":"avoid","brdFormatting":true} format 1`] = `
====================================options=====================================
arrowParens: "avoid"
bracketSpacing: false
brdFormatting: true
jsxSingleQuote: false
jsxTabWidth: 2
parsers: ["babel"]
printWidth: 79
semi: true
singleQuote: true
tabWidth: 4
trailingComma: "es5"
                                                                               | printWidth
=====================================input======================================
var a = (b && c) || (d && e);
let a = [...(b || []), ...c];
const b = (2 * x) / w;
const c = true && (a * b) / c + 1 - 2;
const d = 1 == 2 || 1 != 3;
const very_long_variable1 =
  very_long_condition_variable1 == very_long_condition_variable2;
const very_long_variable2 =
  "this is a test section that will show how to handle " +
  "long lines, such as this one which is 2 lines long";
const e = 1 > 2 || 3 < 4 || 2 <= 3 || 4 >= 1;
const f = e instanceof Error;

=====================================output=====================================
var a = b && c || d && e;
let a = [...b || [], ...c];
const b = 2*x/w;
const c = true && a*b/c+1-2;
const d = 1==2 || 1!=3;
const very_long_variable1 = very_long_condition_variable1==
    very_long_condition_variable2;
const very_long_variable2 = 'this is a test section that will show how to handle '+
    'long lines, such as this one which is 2 lines long';
const e = 1 > 2 || 3 < 4 || 2<=3 || 4>=1;
const f = e instanceof Error;

================================================================================
`;

exports[`function.js - {"trailingComma":"es5","tabWidth":4,"jsxTabWidth":2,"semi":true,"singleQuote":true,"jsxSingleQuote":false,"printWidth":79,"bracketSpacing":false,"arrowParens":"avoid","brdFormatting":true} format 1`] = `
====================================options=====================================
arrowParens: "avoid"
bracketSpacing: false
brdFormatting: true
jsxSingleQuote: false
jsxTabWidth: 2
parsers: ["babel"]
printWidth: 79
semi: true
singleQuote: true
tabWidth: 4
trailingComma: "es5"
                                                                               | printWidth
=====================================input======================================
function etask() {
  return 1;
}

etask(function* (a) {
  yield a();
});
etask(function* _fn(a) {
  yield a();
});

function define(a, b) {
  return b(a);
}

define(["a", "b", "c"], function (a, b, c) {
  return a + b + c;
});

define(["long_param_a", "long_param_b", "long_param_c"], function (
  long_param_a,
  long_param_b,
  long_param_c,
) {
  long_param_a();
  long_param_b();
  long_param_c();
});

=====================================output=====================================
function etask(){
    return 1;
}

etask(function*(a){
    yield a();
});
etask(function*_fn(a){
    yield a();
});

function define(a, b){
    return b(a);
}

define(['a', 'b', 'c'], function(a, b, c){
    return a+b+c;
});

define(['long_param_a', 'long_param_b', 'long_param_c'], function(
    long_param_a,
    long_param_b,
    long_param_c
)
{
    long_param_a();
    long_param_b();
    long_param_c();
});

================================================================================
`;

exports[`jsx.js - {"trailingComma":"es5","tabWidth":4,"jsxTabWidth":2,"semi":true,"singleQuote":true,"jsxSingleQuote":false,"printWidth":79,"bracketSpacing":false,"arrowParens":"avoid","brdFormatting":true} format 1`] = `
====================================options=====================================
arrowParens: "avoid"
bracketSpacing: false
brdFormatting: true
jsxSingleQuote: false
jsxTabWidth: 2
parsers: ["babel"]
printWidth: 79
semi: true
singleQuote: true
tabWidth: 4
trailingComma: "es5"
                                                                               | printWidth
=====================================input======================================
function Component() {
  const comp = (
    <div>
      <p>some content</p>
      <p>some content</p>
      <p>some content</p>
    </div>
  );
  return (
    // comment
    <section>{comp}</section>
  );
}
<Component param_1="param1" param_2={2} param_3={\`\`} param_4={{}} />;
<Component
  long_param_1="param1"
  long_param_2={2}
  long_param_3={\`\`}
  long_param_4={{}}
/>;
<Component
  prop={
    <Component_2 className="class-1 class-2 class-3 class-4 class-5" disabled />
  }
/>;

=====================================output=====================================
function Component(){
    const comp = <div>
      <p>some content</p>
      <p>some content</p>
      <p>some content</p>
    </div>;
    return (
      // comment
      <section>{comp}</section>
    );
}
<Component param_1="param1" param_2={2} param_3={\`\`} param_4={{}} />;
<Component
  long_param_1="param1"
  long_param_2={2}
  long_param_3={\`\`}
  long_param_4={{}}
/>;
<Component
  prop={<Component_2
    className="class-1 class-2 class-3 class-4 class-5"
    disabled
  />}
/>;

================================================================================
`;

exports[`statement.js - {"trailingComma":"es5","tabWidth":4,"jsxTabWidth":2,"semi":true,"singleQuote":true,"jsxSingleQuote":false,"printWidth":79,"bracketSpacing":false,"arrowParens":"avoid","brdFormatting":true} format 1`] = `
====================================options=====================================
arrowParens: "avoid"
bracketSpacing: false
brdFormatting: true
jsxSingleQuote: false
jsxTabWidth: 2
parsers: ["babel"]
printWidth: 79
semi: true
singleQuote: true
tabWidth: 4
trailingComma: "es5"
                                                                               | printWidth
=====================================input======================================
try {
  a();
} catch (e) {
  c(e);
}

switch (a) {
  case 1:
    break;
  default:
    break;
}

for (;;) break;
for (
  let very_long_for_variable = 22;
  very_long_for_variable < Number.MAX_VALUE;
  very_long_for_variable = very_long_for_variable + 1
) {
  long_module_a(very_long_for_variable);
  break;
}

for (const n of [1, 2]) n();
for (const n of [1, 2]) {
  // comment
  n();
}
for (const [k, v] of [
  [1, 2],
  [3, 4],
]) {
  const r = v(k);
  r();
}

for (const n in { a: 1, b: 2 }) n();
for (const n in { a: 1, b: 2 }) {
  // comment
  n();
}
for (const n in { a: 1, b: 2 }) {
  n(); // comment
}

while (1) a -= 1;
while ((a += 1)) a -= 1;
while (a < 1) {
  a *= 2;
  a += 1;
}

if (0) a();
else b();
if (1) {
  // comment
  a();
} else {
  b();
  c();
}
if (1) {
  // comment
  c();
} else {
  d(); // comment
}
if ((a = b)) a();
if (first_variable > 1 || second_variable > 1) a();
if (
  first_variable > 1 &&
  (second_variable < third_variable || second_variable > forth_variable)
) {
  a();
}
if (
  first_variable >
    very_very_very_very_very_very_very_very_long_second_variable &&
  (second_variable < third_variable || second_variable > forth_variable)
) {
  a();
}

=====================================output=====================================
try {
    a();
} catch(e){
    c(e);
}

switch (a)
{
    case 1:
        break;
    default:
        break;
}

for (;;)
    break;
for (
    let very_long_for_variable = 22;
    very_long_for_variable < Number.MAX_VALUE;
    very_long_for_variable = very_long_for_variable+1
)
{
    long_module_a(very_long_for_variable);
    break;
}

for (const n of [1, 2])
    n();
for (const n of [1, 2])
{
    // comment
    n();
}
for (const [k, v] of [[1, 2], [3, 4]])
{
    const r = v(k);
    r();
}

for (const n in {a: 1, b: 2})
    n();
for (const n in {a: 1, b: 2})
{
    // comment
    n();
}
for (const n in {a: 1, b: 2})
{
    n(); // comment
}

while (1)
    a -= 1;
while (a += 1)
    a -= 1;
while (a < 1)
{
    a *= 2;
    a += 1;
}

if (0)
    a();
else
    b();
if (1)
{
    // comment
    a();
}
else
{
    b();
    c();
}
if (1)
{
    // comment
    c();
}
else
{
    d(); // comment
}
if (a = b)
    a();
if (first_variable > 1 || second_variable > 1)
    a();
if (first_variable > 1 &&
    (second_variable < third_variable || second_variable > forth_variable))
{
    a();
}
if (first_variable >
        very_very_very_very_very_very_very_very_long_second_variable &&
    (second_variable < third_variable || second_variable > forth_variable))
{
    a();
}

================================================================================
`;

exports[`ternary.js - {"trailingComma":"es5","tabWidth":4,"jsxTabWidth":2,"semi":true,"singleQuote":true,"jsxSingleQuote":false,"printWidth":79,"bracketSpacing":false,"arrowParens":"avoid","brdFormatting":true} format 1`] = `
====================================options=====================================
arrowParens: "avoid"
bracketSpacing: false
brdFormatting: true
jsxSingleQuote: false
jsxTabWidth: 2
parsers: ["babel"]
printWidth: 79
semi: true
singleQuote: true
tabWidth: 4
trailingComma: "es5"
                                                                               | printWidth
=====================================input======================================
var ternary_operator_result_a = 1 ? 10 : 20;
var ternary_operator_result_b =
  ternary_operator_result_a > ternary_operator_result_a + 1 ? (
    <div>true condition</div>
  ) : (
    <div>
      <p>false condition</p>
      <p>false condition</p>
      <p>false condition</p>
    </div>
  );
var ternary_operator_result_c =
  ternary_operator_result_b + ternary_operator_result_a
    ? call_very_long_function_a()
    : call_very_long_function_b(
        call_very_long_function_parameter_a,
        call_very_long_function_parameter_b,
        call_very_long_function_parameter_c,
      ) +
      call_very_long_function_c(
        call_very_long_function_parameter_a,
        call_very_long_function_parameter_b,
        call_very_long_function_parameter_c,
      );
let a = [
  ...(first_variable === "some_none_empty_string"
    ? [1, 2, 3, 4, 5, 6, 7, 8]
    : []),
];

=====================================output=====================================
var ternary_operator_result_a = 1 ? 10 : 20;
var ternary_operator_result_b = ternary_operator_result_a >
    ternary_operator_result_a+1 ? <div>true condition</div> : <div>
      <p>false condition</p>
      <p>false condition</p>
      <p>false condition</p>
    </div>;
var ternary_operator_result_c = ternary_operator_result_b+
    ternary_operator_result_a
        ? call_very_long_function_a()
        : call_very_long_function_b(call_very_long_function_parameter_a,
              call_very_long_function_parameter_b,
              call_very_long_function_parameter_c)+
          call_very_long_function_c(call_very_long_function_parameter_a,
              call_very_long_function_parameter_b,
              call_very_long_function_parameter_c);
let a = [...first_variable==='some_none_empty_string'
        ? [1, 2, 3, 4, 5, 6, 7, 8]
        : []];

================================================================================
`;

exports[`variable-declatation.js - {"trailingComma":"es5","tabWidth":4,"jsxTabWidth":2,"semi":true,"singleQuote":true,"jsxSingleQuote":false,"printWidth":79,"bracketSpacing":false,"arrowParens":"avoid","brdFormatting":true} format 1`] = `
====================================options=====================================
arrowParens: "avoid"
bracketSpacing: false
brdFormatting: true
jsxSingleQuote: false
jsxTabWidth: 2
parsers: ["babel"]
printWidth: 79
semi: true
singleQuote: true
tabWidth: 4
trailingComma: "es5"
                                                                               | printWidth
=====================================input======================================
// https://brightdata.com/dna/js_code#format-var_declaration
let a = (b = 1);
let al = "test",
  bl = fn("another", "test"),
  cl = {
    long_property_1: 1,
    long_property_2: "2",
    long_property_3: false,
  },
  dl = "yet another";
let as = "test",
  bs = f("another", "test"),
  cs = "yet another";
const variable =
  optional_variable &&
  {
    default: "default",
    success: "success",
    alert: "alert",
    warning: "warning",
    info: "info",
  }[optional_variable];

=====================================output=====================================
// https://brightdata.com/dna/js_code#format-var_declaration
let a = b = 1;
let al = 'test', bl = fn('another', 'test'), cl = {
        long_property_1: 1,
        long_property_2: '2',
        long_property_3: false,
    }, dl = 'yet another';
let as = 'test', bs = f('another', 'test'), cs = 'yet another';
const variable = optional_variable &&
    {
        default: 'default',
        success: 'success',
        alert: 'alert',
        warning: 'warning',
        info: 'info',
    }[optional_variable];

================================================================================
`;
